# dzr-tui

./: .gitignore  README.md  dzr  dzr-cli.py  dzr-tui.py  log.txt  pyproject.toml  requirements.txt
config/: config.json
custom_widgets/: downloader.py  item_album.py  item_artist.py  media_player.py  player_control.py  player_info.py  track_item.py
dzr_tui/: __main__.py
dzr_tui/custom_widgets/: item_track.py  media_player.py
